chandeliers-lus/tests/fail/ui/tc/extern/missing-const.rs
chandeliers_lus::decl! {
    extern const MISSING: float;
}

fn main() {}
